Updated theme.sass to fix the header gap issue

--- a/sass/theme/_theme.scss
+++ b/sass/theme/_theme.scss
@@ -408,3 +408,23 @@ a.btn.btn-dark {
     color: white;
 }
 }
+
+/*--------------------------------------------------------------
+Override the desktop media query for header to fix the gap issue
+--------------------------------------------------------------*/
+// Desktop
+@include media-breakpoint-up(xl) {
+  #asu-header + div,
+  #asu-header + main {
+    @include transition;
+    margin-top: 144px;
+  }
+}
+
+@include media-breakpoint-down(lg) {
+  #asu-header + div,
+  #asu-header + main {
+    @include transition;
+    margin-top: 113px;
+  }
+}
